--- a/main.html
+++ b/main.html
@@ -4,10 +4,25 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+<style>
+	body{
+		width:10px;
+		padding:10px;
+		background-color:gray;
+		box-shadow:w
+	}
+	h1{
+		text-align:center;
+	}
+</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="https://st2.depositphotos.com/1000874/9830/i/450/depositphotos_98309822-stock-photo-red-tree-with-shape-of.jpg" width:0.1px height:2px>
+	<h1>Pricing Card</h1>
+	<p>Price: Rs.200</p>
+	<p>Description:Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+	<button>Buy Now</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
