--- a/main.html
+++ b/main.html
@@ -6,19 +6,30 @@
 	<link rel="stylesheet" href="styles.css">
 <style>
 	body{
-		width:10px;
-		padding:10px;
-		background-color:gray;
-		box-shadow:w
+		 margin:0px auto;
+    width:100%;
+    height:50px;
+    background-color:grey;
+    float:left;
+    padding:10px;
+    border:2px solid red;
 	}
 	h1{
 		text-align:center;
+	}
+	
+		img{
+			text-align:center;
+			width:250px;
+			height:300px;
+		}
 	}
 </style>
 </head>
 
 <body>
 	<img src="https://st2.depositphotos.com/1000874/9830/i/450/depositphotos_98309822-stock-photo-red-tree-with-shape-of.jpg" width:0.1px height:2px>
+
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
 	<p>Description:Lorem
