--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 <style>
 	body{
-		 margin:0px auto;
+	 margin:0px auto;
     width:100%;
     height:50px;
     background-color:grey;
@@ -19,6 +19,8 @@
 	}
 	
 		img{
+			display:block;
+			margin:auto;
 			text-align:center;
 			width:250px;
 			height:300px;
@@ -28,7 +30,7 @@
 </head>
 
 <body>
-	<img src="https://st2.depositphotos.com/1000874/9830/i/450/depositphotos_98309822-stock-photo-red-tree-with-shape-of.jpg" width:0.1px height:2px>
+	<img src="https://st2.depositphotos.com/1000874/9830/i/450/depositphotos_98309822-stock-photo-red-tree-with-shape-of.jpg" width="250" height="300">
 
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
