--- a/main.html
+++ b/main.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
-<style>
-	body{
-	 margin:0px auto;
-    width:100%;
-    height:50px;
-    background-color:grey;
-    float:left;
-    padding:10px;
-    border:2px solid red;
-	}
-	h1{
-		text-align:center;
-	}
-	
-		img{
-			display:block;
-			margin:auto;
+	<style>
+		body {
+			margin:0px auto;
+			width:100%;
+			height:50px;
+			background-color:grey;
+			float:left;
+			padding:10px;
+			border:2px solid red;
+		}
+		h1 {
 			text-align:center;
+		}
+		
+		img {
+			display: block;
+			margin: auto;
 			width:250px;
 			height:300px;
 		}
-	
-</style>
+	</style>
 </head>
 
 <body>
@@ -34,14 +30,8 @@
 
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
-	<p>Description:Lorem
-		ipsum dolor sit amet,
-		consectetur adipiscing 
-		elit.</p>
+	<p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 	<button>Buy Now</button>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
