--- a/main.html
+++ b/main.html
@@ -26,12 +26,14 @@
 </head>
 
 <body>
+	<div>
 	<img src="https://st2.depositphotos.com/1000874/9830/i/450/depositphotos_98309822-stock-photo-red-tree-with-shape-of.jpg" width="250" height="300">
 
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
 	<p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 	<button>Buy Now</button>
+	</div>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
